--- a/index.html
+++ b/index.html
@@ -16,7 +16,28 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<tbody>
+					<tr>
+					<td>subject</td>
+					<td>+</td>
+					<td class="fragment">auxiliary <em>do</em></td>
+					<td>+</td>
+					<td class="fragment">main verb</td>
+					</tr>
+					<tr>
+					<td rowspan="2"></td>
+					<td rowspan="2"></td>
+					<td class="fragment">conjugated in Present Simple</td>
+					<td rowspan="2"></td>
+					<td class="fragment">&nbsp;</td>
+					</tr>
+					<tr>
+					<td class="fragment"><strong>do, does</strong></td>
+					<td class="fragment"><strong>base</strong></td>
+					</tr>
+					</tbody>
+					</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
