--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<tbody>
-					<tr>
-					<td>subject</td>
-					<td>+</td>
-					<td class="fragment">auxiliary <em>do</em></td>
-					<td>+</td>
-					<td class="fragment">main verb</td>
-					</tr>
-					<tr>
-					<td rowspan="2"></td>
-					<td rowspan="2"></td>
-					<td class="fragment">conjugated in Present Simple</td>
-					<td rowspan="2"></td>
-					<td class="fragment">&nbsp;</td>
-					</tr>
-					<tr>
-					<td class="fragment"><strong>do, does</strong></td>
-					<td class="fragment"><strong>base</strong></td>
-					</tr>
-					</tbody>
+
+					<table>
+						<tbody>
+						<tr>
+						<td>subject</td>
+						<td>+</td>
+						<td class="fragment">auxiliary <em>do</em></td>
+						<td>+</td>
+						<td class="fragment">main verb</td>
+						</tr>
+						<tr>
+						<td rowspan="2"></td>
+						<td rowspan="2"></td>
+						<td class="fragment">conjugated in Present Simple</td>
+						<td rowspan="2"></td>
+						<td class="fragment">&nbsp;</td>
+						</tr>
+						<tr>
+						<td class="fragment"><strong>do, does</strong></td>
+						<td class="fragment"><strong>base</strong></td>
+						</tr>
+						</tbody>
+					</table>
 					</section>
 				<section>Slide 2</section>
 			</div>
